--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,25 @@
 src/build/
 Examples/Holiday/build/
 Examples/NativeCal/build/
+xcuserdata/
+
+# Xcode Noise
+*.pbxuser
+*.perspective
+*.perspectivev3
+*.mode1v3
+*.mode2v3
+*.xcuserdatad
+*.trace
+*project.xcworkspace/
+
+# OSX Noise
+.DS_Store
+
+# Git Noise
+*.orig
+*.BACKUP.*
+*.REMOTE.*
+*.LOCAL.*
+*.BASE.*
 
